--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nextra-theme-blog": "^0.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "@splitbee/web": "^0.3.0"
   },
   "prettier": {
     "arrowParens": "always",
